cmake_minimum_required(VERSION 3.6.0)
PROJECT(World)

set(DM_OUTPUT_DIRECTORY ${CMAKE_GENERATED_DIR})

set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${DM_OUTPUT_DIRECTORY}/lib)
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${DM_OUTPUT_DIRECTORY}/lib)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${DM_OUTPUT_DIRECTORY}/lib)

set(INCLUDE_EXPORT_DIRECTORY ${CMAKE_SOURCE_DIR}/build/include)

add_subdirectory(src)